--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,6 +1,7 @@
 #home {
     display: flex;
     min-height: calc(100vh - 91px);
+    position: relative;
 }
 
 #cta {
@@ -43,4 +44,24 @@
     font-weight: 500;
     box-shadow: 0px 0px 12px 4px rgba(0, 0, 0, 0.1);
     border-radius: 12px;
+}
+
+#banner {
+    display: flex;
+    align-items: start;
+    justify-content: end;
+    width: 70%;
+}
+
+#banner img {
+    height: 85%;
+    margin-top: 2rem;
+    margin-right: -50px;
+    border-radius: 5%;
+    box-shadow: 0px 0px 12px 4px rgba(0, 0, 0, 0.1);
+    transition: .3s ease;
+}
+
+#banner img:hover {
+    height: 85.5%;
 }
