--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -65,3 +65,28 @@
 #banner img:hover {
     height: 85.5%;
 }
+
+@media screen and (max-width: 1170px) {
+    #home {
+        min-height: 100%;
+        padding-top: 0px;
+    }
+
+    #banner,
+    #banner img,
+    #home.shape {
+        display: none;
+    }
+
+    #cta {
+        width: 100%;
+        text-align: center;
+        align-items: center;
+    }
+}
+
+@media screen and (max-width: 450px) {
+    #phone_btn button {
+        display: none;
+    }
+}
